--- a/CursoUdemy/Angular/heroesApp/angular.json
+++ b/CursoUdemy/Angular/heroesApp/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "pipesApp": {
+    "heroesApp": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -20,7 +20,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/pipesApp",
+            "outputPath": "dist/heroesApp",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -31,11 +31,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss",
-              "node_modules/primeicons/primeicons.css",
-              "node_modules/primeng/resources/themes/arya-blue/theme.css",
-              "node_modules/primeng/resources/primeng.min.css",
-              "node_modules/primeflex/primeflex.css"
+              "src/styles.scss"
             ],
             "scripts": []
           },
@@ -76,10 +72,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "pipesApp:build:production"
+              "browserTarget": "heroesApp:build:production"
             },
             "development": {
-              "browserTarget": "pipesApp:build:development"
+              "browserTarget": "heroesApp:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -87,7 +83,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "pipesApp:build"
+            "browserTarget": "heroesApp:build"
           }
         },
         "test": {
@@ -111,5 +107,5 @@
       }
     }
   },
-  "defaultProject": "pipesApp"
+  "defaultProject": "heroesApp"
 }
