--- a/CursoUdemy/Angular/heroesApp/package.json
+++ b/CursoUdemy/Angular/heroesApp/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "pipes-app",
+  "name": "heroes-app",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve -o",
+    "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -11,7 +11,6 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.0.5",
-    "@angular/cdk": "^12.2.9",
     "@angular/common": "~12.0.5",
     "@angular/compiler": "~12.0.5",
     "@angular/core": "~12.0.5",
@@ -19,10 +18,6 @@
     "@angular/platform-browser": "~12.0.5",
     "@angular/platform-browser-dynamic": "~12.0.5",
     "@angular/router": "~12.0.5",
-    "f": "^1.4.0",
-    "primeflex": "^3.0.1",
-    "primeicons": "^4.1.0",
-    "primeng": "^12.1.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
